--- a/style.css
+++ b/style.css
@@ -97,4 +97,164 @@ nav{
     color: #0e0e0e75;
     margin-bottom: ;
 }
+.future{
+    margin-bottom: 80px;
+}
 
+.future-container h2{
+    font-size: 40px;
+    font-weight: bold;
+    color: #0E0E0E;
+    margin-bottom: 24px;
+}
+
+.future-container p{
+    font-size: 16px;
+    font-weight: 400;
+    color: #0e0e0e63;
+    margin-bottom: 32px;
+}
+.future-card{
+    display: flex;
+    justify-content: space-between;
+    gap: 24px;
+    margin-bottom: 32px;
+}
+
+.future-card .card{
+    padding: 32px;
+}
+
+.future-card .card img{
+    width: 64px;
+    height: 64px;
+    margin-bottom: 24px;
+}
+
+.future-card .card h3{
+    font-size: 20px;
+    font-weight: bold;
+    color: #0e0e0ed8;
+    margin-bottom: 12px;
+}
+
+.future-card .card-1{
+    background-color: #548ff542;
+    border-radius: 16px;
+}
+
+.future-card .card-2{
+    background-color: #C6E4D6;
+    border-radius: 16px;
+}
+
+.future-card .card-3{
+    background-color: #F7EBCF;
+    border-radius: 16px;
+}
+
+.future-card .card-1 button{
+    font-size: 16px;
+    font-weight: 600;
+    padding: 11px 20px;
+    color: #FFFFFF;
+    background-color: #5490F5;
+    border: none;
+}
+
+.future-card .card-2 button{
+    font-size: 16px;
+    font-weight: 600;
+    padding: 11px 20px;
+    color: #FFFFFF;
+    background-color: #09A15C;
+    border: none;
+}
+
+.future-card .card-3 button{
+    font-size: 16px;
+    font-weight: 600;
+    padding: 11px 20px;
+    color: #FFFFFF;
+    background-color: #FFC239;
+    border: none;
+}
+
+.yunus{
+    background-color: #FFFFFF;
+    background-image: url(./assets/quote-bg.png);
+    background-repeat: no-repeat;
+    background-position-x: 25px;
+    background-position-y: 20px;
+    /* background-position: 0px; */
+    padding: 48px 24px;
+    border-radius: 16px;
+}
+.yunus p{
+    font-size: 16px;
+    font-weight: 400;
+    color: #0e0e0ee0;
+    margin-bottom: 12px;
+}
+.yunus h2{
+    font-size: 20px;
+    font-weight: 600;
+    color: #0e0e0ee0;
+    margin-bottom: 4px;
+}
+.yunus .p2{
+    margin-bottom: 0px;
+}
+.opinion{
+    margin-bottom: 80px;
+}
+.news{
+    margin-bottom: 80px;
+}
+.news-container h2{
+    font-size: 40px;
+    font-weight: bold;
+    color: #0E0E0E;
+    margin-bottom: 24px;
+}
+.news-container p{
+    font-size: 16px;
+    font-weight: 400;
+    color: #0e0e0eb7;
+    margin-bottom: 32px;
+}
+.news-info{
+    display: flex;
+    justify-content: space-between;
+    gap: 32px;
+    background-color: #FFFFFF;
+    margin-bottom: 24px;
+    padding: 48px;
+    border-radius: 24px;
+}
+
+.news-info .img img{
+    border-radius: 24px;
+}
+.news-info h2{
+    font-size: 32px;
+    font-weight: bold;
+    color: #0e0e0ec7;
+    margin-bottom: 12px;
+}
+.news-info .al{
+    margin-bottom: 12px;
+}
+.news-info button{
+    font-size: 18px;
+    font-weight: 600;
+    color: #FFFFFF;
+    padding: 13px 26px;
+    background-color: #006A50;
+}
+ .news-info .date{
+    font-size: 16px;
+    font-weight: 400;
+    color: #0e0e0e7a;
+    margin-bottom: 12px;
+}
